fixed arena more